[gd_scene load_steps=3 format=3 uid="uid://denj32nabvvcn"]

[ext_resource type="Script" path="res://scripts/dialogue_box.gd" id="1_d0xpf"]
[ext_resource type="Theme" uid="uid://cxj6si8d5q8i7" path="res://resources/font_thin.tres" id="1_lsy7x"]

[node name="DialogueBox" type="Node2D"]
z_index = 5
script = ExtResource("1_d0xpf")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(120, 16)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 120.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lsy7x")

[node name="OuterMargin" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundColor" type="ColorRect" parent="Control/OuterMargin"]
layout_mode = 2
color = Color(0, 0, 0, 0.862745)

[node name="InnerMargin" type="MarginContainer" parent="Control/OuterMargin"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="DialogueContent" type="RichTextLabel" parent="Control/OuterMargin/InnerMargin"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_lsy7x")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "Testing"
fit_content = true
scroll_active = false
